@@ -3,6 +3,8 @@ changes may be omitted). For a complete list of changes, see the main
 changelog: http://svn.gna.org/viewcvs/*checkout*/wesnoth/trunk/changelog
 
 Version 1.5.7+svn:
+  * Graphics:
+    * Fixed a glitch where a new dialog didn't show up after an old dialog.
   * Language and translations
     * updated translations: Slovak.
 
